Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6763

Debugging ends after SIGSTOP on Fedora 16 for "Run in Terminal"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 2.5.0-beta
    • Qt Creator 2.5.0-beta
    • Debugger
    • None
    • Fedora 16 i686
    • c466dcf084f682f88202f1ea6c42cebab6965288

      On Fedora 16 i686, in QtCreator development version, running debugger (regardless of breakpoints) results in an error: "The inferior stopped because it received a signal from the Operating System.

      Signal name: SIGSTOP
      Signal meaning: Stopped (signal)"

      This did not occur in 2.4.0 and in mid-December builds.

      After that, "Diassembler (_start)" is shown as active document and it reads:
      0x473592b0 <+0x0000> mov %esp,%eax
      0x473592b2 <+0x0002> call 0x4735d5a0 <_dl_start>

        For Gerrit Dashboard: QTCREATORBUG-6763
        # Subject Branch Project Status CR V

            hjk hjk
            rivanvx Vedran Miletić
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes