debugger: handle new *stopped output indication reasons in gdb 7.4

Task-number: QTCREATORBUG-6763
Change-Id: I7a95bdbb9ab7b85beb19b7d390a10a5d629dc7e7
Reviewed-by: hjk <qthjk@ovi.com>